	Made crash detetion algorythm a bit more sensitive
	Initial MSP OSD support

Version 0.232.074 ALPHA A:
	Super Secret Test A

Version 0.232.075 ALPHA B:
	Super Secret Test B

Version 0.234.076 BETA:
	Added MSP support for OSD usage
	To enable:
		set telem_msp=1 through 6 for usart 1 through usart 6's TX pin
		example:
			set telem_msp=3
			save
			#This will enabled MSP telemtry on usart 3's TX pin at 115,200 baud
	Fixed issue with LEDs not always turning on
	Added set led_with_usb=0
		Default is 0
		set to 1 to enable WS2812 LEDs when plugged into USB
		The default is to have them disabled (0) since too many LEDs may draw too much power through the USB connection

Version 0.235.078 ALPHA:
	added "set filter_type", default is 0, other option is 1
	changed defaults
	set current setting to default for bolt
	adjusted tpa defaults
	added throttle curve

Version 0.236.078 BETA:
	added filter_type 2 and 3
		these are the same filter as filter 1 but use different methods to increase resolution
	Reversed vtxon and vtxpit commands

Version 0.237.079 RC16:
	Flight code improvments and new defaults
	Adjusted motor test function

Version 0.238.079 RC17:
	Smart audio update
	New defaults

Version 0.239.079 RC18:
	New defaults

Version 0.240.080 BETA:
	Added "set rc_smoothing = 1.0"
		You can range it from 0.1 to 4.0 to decrease or increase the smoothing effect with 1.0 being default
			Does not function in direct mode
	set skunk = 1 will change flight code to RC12 opperation
	set skunk = 0 will change flight code to RC1 opperation

Version 0.241.080 BETA:
	Adjust defaults

Version 0.242.081 BETA:
	Adjust PID scaling to be thge same between skunks

Version 0.243.082 BETA:
	New Defaults

Version 0.244.083 BETA:
	New Defaults
	set skunk=2 disables attitude calculations (Roll Pitch Yaw) using ACC

#Features in current development:
#	MSP OSD compatibility
#	MAVlink compatibility

#Features for future development:
#	transponder output
#	Sonar input
#	GPS input
#	Unobtanium detector