@@ -111,8 +111,8 @@ volatile float servoOutput[MAX_SERVO_NUMBER];
 int32_t activeMotorCounter = -1; //number of active motors minus 1
 
 static float throttleCurve[ATTENUATION_CURVE_SIZE]      = {0.000f, 0.125f, 0.250f, 0.375f, 0.500f, 0.625f, 0.750f, 0.875f, 1.000f};
-static float kpAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.20, 1.10, 1.00, 0.90, 0.80, 0.90, 1.00, 1.10, 1.20};
-static float kiAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.20, 1.10, 1.00, 0.90, 0.80, 0.90, 1.00, 1.10, 1.20};
+static float kpAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.30, 1.15, 1.00, 0.90, 0.80, 0.90, 1.00, 1.10, 1.20};
+static float kiAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.00, 1.00, 1.00, 0.95, 0.90, 0.95, 1.00, 1.05, 1.10};
 static float kdAttenuationCurve[ATTENUATION_CURVE_SIZE] = {1.20, 1.10, 1.00, 0.90, 0.80, 0.90, 1.00, 1.10, 1.20};
 
 static void PrintThrottleCurve(void);
